module(name = "ps_monorepo")

bazel_dep(name = "catch2", version = "3.8.0")

bazel_dep(name = "eigen", version = "5.0.0")

bazel_dep(name = "grpc", version = "1.70.1")

bazel_dep(name = "rules_cc", version = "0.1.1")

bazel_dep(name = "rules_proto", version = "7.1.0")

bazel_dep(name = "spdlog", version = "1.15.1")

bazel_dep(name = "sqlite3", version = "3.49.1")

bazel_dep(name = "rules_cuda", version = "0.2.5")

# begin Qt6
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_qt")
local_path_override(
    module_name = "rules_qt",
    path = "bazel/qt",
)

qt = use_extension("@rules_qt//:extensions.bzl", "qt")
qt.fetch()
use_repo(
    qt,
    "qt_linux_x86_64",
)

register_toolchains(
    "@rules_qt//tools:all",
    dev_dependency = True,
)
# end Qt6
