load("@rules_cc//cc:defs.bzl", "cc_test")

filegroup(
    name = "data",
    srcs = glob(["data/**"]),
)

cc_test(
    name = "JobScheduleTest",
    size = "small",
    srcs = ["JobScheduleTest.cpp"],
    data = ["data"],
    deps = [
        "//algo/other:JobSchedule",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "KnapsackTest",
    size = "small",
    srcs = ["KnapsackTest.cpp"],
    data = ["data"],
    deps = [
        "//algo/other:Knapsack",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "TravelingSalesmanTest",
    size = "small",
    srcs = ["TravelingSalesmanTest.cpp"],
    data = ["data"],
    deps = [
        "//algo/other:TravelingSalesman",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "TravelingSalesmanAlgoClassTest",
    size = "enormous",
    timeout = "moderate",
    srcs = ["TravelingSalesmanAlgoClassTest.cpp"],
    data = ["data"],
    deps = [
        "//algo/other:TravelingSalesman",
        "@catch2//:catch2_main",
    ],
)
