load(":qt_toolchain.bzl", "qt_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

qt_toolchain(
    name = "qt_linux",
    data = [
        "@qt_linux_x86_64//:moc",
        "@qt_linux_x86_64//:rcc",
        "@qt_linux_x86_64//:uic",
    ],
    moc_cmd = "$(location @qt_linux_x86_64//:moc)",
    rcc_cmd = "$(location @qt_linux_x86_64//:rcc)",
    uic_cmd = "$(location @qt_linux_x86_64//:uic)",
)

toolchain(
    name = "qt_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":qt_linux",
    toolchain_type = "@rules_qt//tools:toolchain_type",
)
