load("//rules:archive.bzl", "archive")

cc_library(
    name = "print",
    srcs = ["print.cpp"],
    hdrs = ["print.h"],
)

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    deps = [
        ":print",
    ],
)

archive(
    name = "documentation",
    files = [
        "README.md",
    ],
    out = "doumentation.zip",
)

archive(
    name = "release",
    files = [
        "RELEASE.md",
    ],
    out = "release.zip",
)
